reworked tests to accomodate spaces in file names added additional JAVA_OPTS test to test out using spaces in quoted options